crates/sephera_cli/tests/snapshots/loc_cli__loc_command_returns_error_for_invalid_regex_ignore.snap
---
source: crates/sephera_cli/tests/loc_cli.rs
description: LOC command should error when regex ignore pattern is invalid
expression: stderr
---
error: invalid regex ignore pattern `(`: regex parse error:
    (
    ^
error: unclosed group
